[package]
name = "srpc"
version = "0.1.0"
edition = "2021"

[lib]
name = "srpc"
path = "src/lib.rs"

[[bin]]
name = "srpc"
path = "src/main.rs"

[dependencies]
actix-web = "4.8.0"
awc = "3.5.0"
env_logger = "0.11.5"
erased-serde = "0.4.5"
log = "0.4.22"
rmp-serde = "1.3.0"
serde = {version = "1.0.204", features = ["serde_derive"]}
tokio = "1.39.2"
